--- a/hotels.html
+++ b/hotels.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <title>Sedona</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style-pref.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/normalaz.min.css">
 </head>
 
 <body>
-<div class="wrapper">
-  <header class="header">
+  <div class="wrapper">
+    <header class="header">
       <nav class="site-navigation">
         <ul class="list-menu">
           <li class="item-menu"><a href="#" class="link-item-menu">Информация</a></li>
@@ -21,8 +22,8 @@
           <img src="img/logo-min.png" alt="логотип" class="logo" width="138" height="70">
         </a>
       </nav>
-  </header>
-  <main>
+    </header>
+    <main>
       <section class="filter">
         <h2 class="visually-hidden">Фильтер</h2>
         <form action="#" class="filter-form row">
@@ -45,38 +46,38 @@
             <label for="apartment" class="apartment">апартаменты</label>
           </figure>
           <div class="cost">
-          <span class="name-cost">Стоимость в сутки (Р):</span>
-          <p class="border-container">
-          <label for="max" class="cost-min">от 0</label>
-          <label for="min" class="cost-max">до 3000</label>
-          </p>
-          <input type="number" name="max" id="max">
-          <input type="number" name="min" id="min">
-          <p class="img-slider">
-            <span class="img-thumb left"></span>
-            <span class="img-thumb right"></span>
-            <span class="track"></span>
-            <span class="track-active"></span>
-          </p>
-          <button type="button" class="filter-btn">ПОКАЗАТЬ</button>
-        </div>
+            <span class="name-cost">Стоимость в сутки (Р):</span>
+            <p class="border-container">
+              <label for="max" class="cost-min">от 0</label>
+              <label for="min" class="cost-max">до 3000</label>
+            </p>
+            <input type="number" name="max" id="max">
+            <input type="number" name="min" id="min">
+            <p class="img-slider">
+              <span class="img-thumb left"></span>
+              <span class="img-thumb right"></span>
+              <span class="track"></span>
+              <span class="track-active"></span>
+            </p>
+            <button type="button" class="filter-btn">ПОКАЗАТЬ</button>
+          </div>
         </form>
       </section>
       <section class="sorting row">
         <h2 class="visually-hidden">Сортировка товара по убыванию или возрастанию</h2>
         <p class="blog-name-sorting">
-        <span class="number-of-found">Найдено: 3</span>
-        <span class="name-sorting">СОРТИРОВКА:</span>
-      </p>
-       <p class="blog-link-sorting">
-        <a href="#" class="sorting-link-price active">ПО ЦЕНЕ</a>
-        <a href="#" class="sorting-link-type">ПО ТИПУ</a>
-        <a href="#" class="sorting-link-rating">ПО РЕЙТИНГУ</a>
-      </p>
-    <p class="blog-point-sorting">
-        <a href="#" class="point-increase"></a>
-        <a href="#" class="point-decrease active"></a>
-      </p>
+          <span class="number-of-found">Найдено: 3</span>
+          <span class="name-sorting">СОРТИРОВКА:</span>
+        </p>
+        <p class="blog-link-sorting">
+          <a href="#" class="sorting-link-price active">ПО ЦЕНЕ</a>
+          <a href="#" class="sorting-link-type">ПО ТИПУ</a>
+          <a href="#" class="sorting-link-rating">ПО РЕЙТИНГУ</a>
+        </p>
+        <p class="blog-point-sorting">
+          <a href="#" class="point-increase"></a>
+          <a href="#" class="point-decrease active"></a>
+        </p>
       </section>
       <section class="hotels">
         <h2 class="visually-hidden">Список отелей</h2>
@@ -87,24 +88,24 @@
               <div class="description-hotel">
                 <a href="#" class="linck-name-hotel"><h3 class="name-hotel">Amara Resort & Spa</h3></a>
                 <p class="characteristic-hotel">
-                <span class="type-hotel">Гостиница</span>
-                <span class="cost-hotel">ОТ 4000 Р.</span>
+                  <span class="type-hotel">Гостиница</span>
+                  <span class="cost-hotel">ОТ 4000 Р.</span>
                 </p>
                 <p class="btn-hotel">
-                <a href="#" class="detail-hotel">Подробнее</a>
-                <a href="#" class="book-hotel">Забронировать</a>
-              </p>
+                  <a href="#" class="detail-hotel">Подробнее</a>
+                  <a href="#" class="book-hotel">Забронировать</a>
+                </p>
               </div>
-            <div class="rating-hotel">
-              <p class="points">
+              <div class="rating-hotel">
+                <p class="points">
                   <span class="points-rating"></span>
                   <span class="points-rating"></span>
                   <span class="points-rating"></span>
                   <span class="points-rating"></span>
                   <span class="points-rating"></span>
                 </p>
-                  <span class="text-rating">Рейтинг: 8,5</span>
-                </div>
+                <span class="text-rating">Рейтинг: 8,5</span>
+              </div>
             </article>
           </li>
           <li class="item-hotel">
@@ -113,20 +114,20 @@
               <div class="description-hotel">
                 <a href="#" class="linck-name-hotel"><h3 class="name-hotel">Desert Quail Inn</h3></a>
                 <p class="characteristic-hotel">
-                <span class="type-hotel">Мотель</span>
-                <span class="cost-hotel">ОТ 3000 Р.</span>
-               </p>
+                  <span class="type-hotel">Мотель</span>
+                  <span class="cost-hotel">ОТ 3000 Р.</span>
+                </p>
                 <p class="btn-hotel">
-                <a href="№" class="detail-hotel">Подробнее</a>
-                <a href="№" class="book-hotel">Забронировать</a>
-              </p>
+                  <a href="№" class="detail-hotel">Подробнее</a>
+                  <a href="№" class="book-hotel">Забронировать</a>
+                </p>
               </div>
               <div class="rating-hotel">
-              <p class="points">
-                <span class="points-rating"></span>
-                <span class="points-rating"></span>
-                <span class="points-rating"></span>
-              </p>
+                <p class="points">
+                  <span class="points-rating"></span>
+                  <span class="points-rating"></span>
+                  <span class="points-rating"></span>
+                </p>
                 <span class="text-rating">Рейтинг: 8,9</span>
               </div>
             </article>
@@ -137,27 +138,27 @@
               <div class="description-hotel">
                 <a href="#" class="linck-name-hotel"><h3 class="name-hotel">Villas at Poco Diablo</h3></a>
                 <p class="characteristic-hotel">
-                <span class="type-hotel">Апартаменты</span>
-                <span class="cost-hotel">ОТ 2000 Р.</span>
-              </p>
+                  <span class="type-hotel">Апартаменты</span>
+                  <span class="cost-hotel">ОТ 2000 Р.</span>
+                </p>
                 <p class="btn-hotel">
-                <a href="№" class="detail-hotel">Подробнее</a>
-                <a href="№" class="book-hotel">Забронировать</a>
-              </p>
+                  <a href="№" class="detail-hotel">Подробнее</a>
+                  <a href="№" class="book-hotel">Забронировать</a>
+                </p>
               </div>
               <div class="rating-hotel">
-              <p class="points">
-                <span class="points-rating"></span>
-                <span class="points-rating"></span>
-              </p>
+                <p class="points">
+                  <span class="points-rating"></span>
+                  <span class="points-rating"></span>
+                </p>
                 <span class="text-rating">Рейтинг: 9,2</span>
               </div>
             </article>
           </li>
         </ul>
       </section>
-  </main>
-  <footer class="footer footer-fix">
+    </main>
+    <footer class="footer footer-fix">
       <p class="visit">
         <span>#visitSEDONA</span>
       </p>
@@ -190,7 +191,8 @@
           <path d="M370.53,323.31l-0.16,0-15.28,1.6v28L370.37,362l15.28-9.09v-28Zm13.12,28.45-13.28,7.9-13.28-7.9V340.28l13.22,7.87,0,1.43-9.07-5.4v1.38l9.11,5.47,0,1.46-9.1-5.42v1.38l9.11,5.47h0l9.19-5.5v-1.39h0v-4.52l4.1-2.45v11.67Zm0-13.16L380,340.74h0l-1.68,1-8-4.76v1.38l6.84,4.07-0.06,0-0.15.09-1,.57-5.64-3.36v1.38l4.45,2.65-1.05.7,0,0-3.36-2v1.38l2.21,1.3-2.25,1.35-13.16-7.82,13.17-7.92h0Zm0-1.39-13.35-7.87h0l-13.2,7.86v-10.5l13.28-1.39,13.28,1.39v10.51Z" transform="translate(-355.09 -323.29)" fill="#fff"/></svg>
         </a>
       </div>
-  </footer>
-</div>
-  </body>
+    </footer>
+  </div>
+</body>
+
 </html>
