--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/style-pref.css">
-    <link rel="stylesheet" href="css/normalaz.min.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/normalaz.min.css">
+</head>
+
+<body>
   <div class="wrapper">
     <header class="header">
       <nav class="site-navigation">
@@ -22,12 +24,11 @@
       </nav>
     </header>
     <main>
-      <div class="wrapper">
-        <section class="logo-poster">
-          <h1 class="visually-hidden">Sedona</h1>
-          <p class="slogan">СЕДОНА — небольшой городок в АРИЗОНЕ, зАСЛУЖИвающий большего!</p>
-          <span class="text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
-        </section>
+      <section class="logo-poster">
+        <h1 class="visually-hidden">Sedona</h1>
+        <p class="slogan">СЕДОНА — небольшой городок в АРИЗОНЕ, зАСЛУЖИвающий большего!</p>
+        <span class="text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
+      </section>
       <div class="position">
         <section class="features">
           <h2 class="visually-hidden">Особенности</h2>
@@ -51,17 +52,17 @@
           <ul class="list-advantages">
             <li class="item-advantage">
               <div class="side-advantage">
-              <h3 class="name-advantage">НАСТОЯЩИЙ ГОРОДОК</h3>
-              <span class="namber-advantage">— №1 —</span>
-              <p class="description-advantage">СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+                <h3 class="name-advantage">НАСТОЯЩИЙ ГОРОДОК</h3>
+                <span class="namber-advantage">— №1 —</span>
+                <p class="description-advantage">СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
               <div class="img-advantage-first"></div>
             </li>
             <li class="item-advantage">
               <div class="side-advantage">
-              <h3 class="name-advantage">ТАМ ЕСТЬ Мост дьявола</h3>
-              <span class="namber-advantage">— №2 —</span>
-              <p class="description-advantage">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                <h3 class="name-advantage">ТАМ ЕСТЬ Мост дьявола</h3>
+                <span class="namber-advantage">— №2 —</span>
+                <p class="description-advantage">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
               <div class="img-advantage-second"></div>
             </li>
@@ -82,20 +83,19 @@
             </li>
           </ul>
         </section>
-        </div>
-        <section class="search">
-          <h2 class="visually-hidden">Поиск гостиницы</h2>
-          <span class="question">ЗАИНТЕРЕСОВАЛИСЬ?</span>
-          <p class="search-help">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-          <button class="search-btn">ПОИСК ГОСТИНИЦЫ В седоне</button>
-          <section class="search-popup">
-            <h2 class="visually-hidden">Поиск отеля</h2>
-            <form action="#" class="search-form" method="get">
-              <p class="arrival">
+      </div>
+      <section class="search">
+        <h2 class="visually-hidden">Поиск гостиницы</h2>
+        <span class="question">ЗАИНТЕРЕСОВАЛИСЬ?</span>
+        <p class="search-help">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <button class="search-btn">ПОИСК ГОСТИНИЦЫ В седоне</button>
+        <section class="search-popup">
+          <h2 class="visually-hidden">Поиск отеля</h2>
+          <form action="#" class="search-form" method="get">
+            <p class="arrival">
               <label for="arrival" class="arrival-date">Дата заезда:</label>
               <input type="text" id="arrival" name="arrival-date" placeholder="24 апреля 2017">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
               <g>
                 <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
                   c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
@@ -115,12 +115,11 @@
                 <rect x="13.781" y="8.225" width="2.625" height="2.066"/>
               </g>
               </svg>
-              </p>
-              <p class="departure">
+            </p>
+            <p class="departure">
               <label for="departure" class="departure-date">Дата Выезда:</label>
               <input type="text" id="departure" name="departure-date" placeholder="4 июля 2017">
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
               <g>
                 <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
                   c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
@@ -140,33 +139,34 @@
                 <rect x="13.781" y="8.225" width="2.625" height="2.066"/>
               </g>
               </svg>
-              </p>
-              <p class="adult">
+            </p>
+            <p class="adult">
               <label for="adult" class="visitor-numbers-adult">ВзрослыЕ:</label>
               <span class="minus"></span>
               <input type="number" id="adult" name="visitor-numbers-adult" placeholder="2">
               <span class="plus-vertical"></span>
               <span class="plus-horizontal"></span>
-              </p>
-              <p class="child">
+            </p>
+            <p class="child">
               <label for="child" class="visitor-numbers-child">ДетИ:</label>
               <span class="minus"></span>
               <input type="number" id="child" name="visitor-numbers-child" placeholder="0">
               <span class="plus-vertical"></span>
               <span class="plus-horizontal"></span>
-              </p>
-              <button type="submit" class="search-popup-btn">НАЙТИ</button>
-            </form>
-          </section>
+            </p>
+            <button type="submit" class="search-popup-btn">НАЙТИ</button>
+          </form>
         </section>
-        <section class="map">
-          <h2 class="visually-hidden">Карта</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d837186.717958234!2d-112.2907019578886!3d34.95007607728512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1526473940691" height="594" width="1200" style="border:0" allowfullscreen></iframe>
-          <img src="img/map.png" alt="Карта Седоны" class="img-map" height="594" width="1200">
-        </section>
+      </section>
+      <section class="map">
+        <h2 class="visually-hidden">Карта</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d837186.717958234!2d-112.2907019578886!3d34.95007607728512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1526473940691"
+          height="594" width="1200" style="border:0" allowfullscreen></iframe>
+        <img src="img/map.png" alt="Карта Седоны" class="img-map" height="594" width="1200">
+      </section>
     </main>
-  <div class="position">
-    <footer class="footer">
+    <div class="position">
+      <footer class="footer">
         <p class="visit">
           <span>#visitSEDONA</span>
         </p>
@@ -199,11 +199,11 @@
             <path d="M370.53,323.31l-0.16,0-15.28,1.6v28L370.37,362l15.28-9.09v-28Zm13.12,28.45-13.28,7.9-13.28-7.9V340.28l13.22,7.87,0,1.43-9.07-5.4v1.38l9.11,5.47,0,1.46-9.1-5.42v1.38l9.11,5.47h0l9.19-5.5v-1.39h0v-4.52l4.1-2.45v11.67Zm0-13.16L380,340.74h0l-1.68,1-8-4.76v1.38l6.84,4.07-0.06,0-0.15.09-1,.57-5.64-3.36v1.38l4.45,2.65-1.05.7,0,0-3.36-2v1.38l2.21,1.3-2.25,1.35-13.16-7.82,13.17-7.92h0Zm0-1.39-13.35-7.87h0l-13.2,7.86v-10.5l13.28-1.39,13.28,1.39v10.51Z" transform="translate(-355.09 -323.29)" fill="#fff"/></svg>
           </a>
         </div>
-    </footer>
+      </footer>
+    </div>
   </div>
-  </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 
-  </body>
+</body>
 
 </html>
