--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <section class="logo-poster">
         <h1 class="visually-hidden">Sedona</h1>
-        <p class="slogan">СЕДОНА — небольшой городок в АРИЗОНЕ, зАСЛУЖИвающий большего!</p>
+        <p class="slogan">Седона — небольшой городок в аризоне, заслуживающий большего!</p>
         <span class="text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
       </section>
       <div class="position">
@@ -39,7 +39,7 @@
             </li>
             <li class="item-feature food">
               <h3 class="name-feature">Еда</h3>
-              <p class="description-feature">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+              <p class="description-feature">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="item-feature present">
               <h3 class="name-feature">Сувениры</h3>
@@ -52,32 +52,32 @@
           <ul class="list-advantages">
             <li class="item-advantage">
               <div class="side-advantage">
-                <h3 class="name-advantage">НАСТОЯЩИЙ ГОРОДОК</h3>
+                <h3 class="name-advantage">Настоящий городок</h3>
                 <span class="namber-advantage">— №1 —</span>
-                <p class="description-advantage">СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+                <p class="description-advantage">Седона - не аттракцион для туристов, там течет своя жизнь</p>
               </div>
               <div class="img-advantage-first"></div>
             </li>
             <li class="item-advantage">
               <div class="side-advantage">
-                <h3 class="name-advantage">ТАМ ЕСТЬ Мост дьявола</h3>
+                <h3 class="name-advantage">Там есть мост дьявола</h3>
                 <span class="namber-advantage">— №2 —</span>
                 <p class="description-advantage">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
               <div class="img-advantage-second"></div>
             </li>
             <li class="item-advantage">
-              <h3 class="name-advantage">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+              <h3 class="name-advantage">Небольшая площадь</h3>
               <span class="namber-advantage">— №3 —</span>
-              <p class="description-advantage">ВСЕ достопримечательности находятся очень близко</p>
+              <p class="description-advantage">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="item-advantage">
-              <h3 class="name-advantage">КРАСИВАЯ ДОРОГА</h3>
+              <h3 class="name-advantage">Красивая дорога</h3>
               <span class="namber-advantage">— №4 —</span>
-              <p class="description-advantage">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+              <p class="description-advantage">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="item-advantage">
-              <h3 class="name-advantage">МАЛО ТУРИСТОВ</h3>
+              <h3 class="name-advantage">Мало туристов</h3>
               <span class="namber-advantage">— №5 —</span>
               <p class="description-advantage">Большинство едет в гранд каньон и толпится там</p>
             </li>
@@ -86,15 +86,16 @@
       </div>
       <section class="search">
         <h2 class="visually-hidden">Поиск гостиницы</h2>
-        <span class="question">ЗАИНТЕРЕСОВАЛИСЬ?</span>
+        <span class="question">Заинтересовались?</span>
         <p class="search-help">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <button class="search-btn">ПОИСК ГОСТИНИЦЫ В седоне</button>
+        <button class="search-btn">Поиск гостинице в седоне</button>
         <section class="search-popup">
           <h2 class="visually-hidden">Поиск отеля</h2>
           <form action="#" class="search-form" method="get">
             <p class="arrival">
               <label for="arrival" class="arrival-date">Дата заезда:</label>
               <input type="text" id="arrival" name="arrival-date" placeholder="24 апреля 2017">
+              <button type="button" class="calendar">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
               <g>
                 <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
@@ -115,10 +116,12 @@
                 <rect x="13.781" y="8.225" width="2.625" height="2.066"/>
               </g>
               </svg>
+              </button>
             </p>
             <p class="departure">
               <label for="departure" class="departure-date">Дата Выезда:</label>
               <input type="text" id="departure" name="departure-date" placeholder="4 июля 2017">
+              <button type="button" class="calendar">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
               <g>
                 <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
@@ -139,22 +142,29 @@
                 <rect x="13.781" y="8.225" width="2.625" height="2.066"/>
               </g>
               </svg>
+            </button>
             </p>
             <p class="adult">
-              <label for="adult" class="visitor-numbers-adult">ВзрослыЕ:</label>
-              <span class="minus"></span>
+              <label for="adult" class="visitor-numbers-adult">Взрослые:</label>
+              <button class="btn-minus" type="button">
+              </button>
               <input type="number" id="adult" name="visitor-numbers-adult" placeholder="2">
-              <span class="plus-vertical"></span>
-              <span class="plus-horizontal"></span>
+              <button class="btn-plus" type="button">
+                <span class="plus-vertical"></span>
+                <span class="plus-horizontal"></span>
+             </button>
             </p>
             <p class="child">
-              <label for="child" class="visitor-numbers-child">ДетИ:</label>
-              <span class="minus"></span>
+              <label for="child" class="visitor-numbers-child">Дети:</label>
+              <button class="btn-minus" type="button">
+              </button>
               <input type="number" id="child" name="visitor-numbers-child" placeholder="0">
-              <span class="plus-vertical"></span>
-              <span class="plus-horizontal"></span>
+              <button class="btn-plus" type="button">
+                <span class="plus-vertical"></span>
+                <span class="plus-horizontal"></span>
+             </button>
             </p>
-            <button type="submit" class="search-popup-btn">НАЙТИ</button>
+            <button type="submit" class="search-popup-btn">Найти</button>
           </form>
         </section>
       </section>
@@ -168,7 +178,7 @@
     <div class="position">
       <footer class="footer">
         <p class="visit">
-          <span>#visitSEDONA</span>
+          <span>#visitsedona</span>
         </p>
         <ul class="list-social">
           <li class="item-social tweeter">
@@ -182,7 +192,7 @@
           </li>
         </ul>
         <div class="copyright">
-          <span class="description-copyright">WEBSITE by</span>
+          <span class="description-copyright">website by</span>
           <a href="https://htmlacademy.ru/" class="linck-copyright">
             <svg data-name="Layer1" viewBox="0 0 113 39">
             <path d="M401.93,351.51a2.07,2.07,0,0,0,.58-0.11v1.4a3.41,3.41,0,0,1-1.24.22,1.75,1.75,0,0,1-1.75-1,5.08,5.08,0,0,1-3.3,1.13c-1.59,0-3.06-.87-3.06-2.68,0-2.24,2.08-2.93,3.9-2.93a11.63,11.63,0,0,1,2.28.26v-0.31c0-1.09-.8-1.86-2.3-1.86a7.79,7.79,0,0,0-3.15.67v-1.79a10.72,10.72,0,0,1,3.35-.58c2.48,0,4,1.18,4,3.83v3.14A0.57,0.57,0,0,0,401.93,351.51Zm-6.76-1.19a1.42,1.42,0,0,0,1.64,1.29,3.56,3.56,0,0,0,2.53-1V349.1a10.21,10.21,0,0,0-1.9-.22C396.34,348.89,395.17,349.23,395.17,350.33Z" transform="translate(-355.09 -323.29)" fill="#fff"/>
