--- a/hotels.html
+++ b/hotels.html
@@ -84,7 +84,7 @@
         <ul class="list-hotels">
           <li class="item-hotel">
             <article class="hotel row">
-              <img src="img/layer21.jpg" alt="фото Amara Resort & Spa" class="img-hotel" width="135" height="90">
+              <img src="img/amara.jpg" alt="фото Amara Resort & Spa" class="img-hotel" width="135" height="90">
               <div class="description-hotel">
                 <a href="#" class="linck-name-hotel"><h3 class="name-hotel">Amara Resort & Spa</h3></a>
                 <p class="characteristic-hotel">
@@ -110,7 +110,7 @@
           </li>
           <li class="item-hotel">
             <article class="hotel row">
-              <img src="img/layer22.jpg" alt="фото Desert Quail Inn" class="img-hotel" width="135" height="90">
+              <img src="img/desert.jpg" alt="фото Desert Quail Inn" class="img-hotel" width="135" height="90">
               <div class="description-hotel">
                 <a href="#" class="linck-name-hotel"><h3 class="name-hotel">Desert Quail Inn</h3></a>
                 <p class="characteristic-hotel">
@@ -134,7 +134,7 @@
           </li>
           <li class="item-hotel">
             <article class="hotel row">
-              <img src="img/layer23.jpg" alt="фото Villas at Poco Diablo" class="img-hotel" width="135" height="90">
+              <img src="img/villas.jpg" alt="фото Villas at Poco Diablo" class="img-hotel" width="135" height="90">
               <div class="description-hotel">
                 <a href="#" class="linck-name-hotel"><h3 class="name-hotel">Villas at Poco Diablo</h3></a>
                 <p class="characteristic-hotel">
